🔨 Refactor/#123 - 페이지네이션 코드 수정 (#127)
* ♻️ refactor/#123 : 3.1 가게 리스트 조회 페이지네이션 변경

Signed-off-by: EunJiJung <bianbbc87@gmail.com>

* ♻️ refactor/#123 : 5.3 나의 식권 조회 페이지네이션 변경

Signed-off-by: EunJiJung <bianbbc87@gmail.com>

* ♻️ refactor/#123 : event 주기 변경

Signed-off-by: EunJiJung <bianbbc87@gmail.com>

---------

Signed-off-by: EunJiJung <bianbbc87@gmail.com>